Styled the buttons, Added SQL Code snippets in JS comments, Added snapshots to second tool title.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <script src="index.js?v=4-9-18"></script>
     <meta charset="UTF-8">
     <title>Data Stage/ODI to SQL Converter</title>
   </head>
@@ -21,7 +21,7 @@
       <p>* Term list is currently hard coded. Last updated 4/6/18</p>
     <hr>
 
-    <h1>Rollback Type 2 Dimension Execution</h1>
+    <h1>Rollback Type 2 Dimensions/Snapshots</h1>
     <p>*Might need to use trunc(LV_START_DATE) if previous query returns a date with a time.</p>
     <label for="table">Table:</label>
     <input id="table"><br>
